# quantlib

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sbt  docker-compose.yml  pull-intraday  pyproject.toml  pytest.ini
research/: .gitignore  02_anomaly_scan.py  03_full_data_audit.py  05_revenue_audit.py  README.md  cache_tables.py  constants.py  data_calendar.py  db.py  industry_taxonomy.py  paths.py  prices.py  pyproject.toml  testkit.py  update_report.py  v4_fast.py  v4_strategy.py  v4_ultra.py
research/analyses/: active_etf_ladder.py  active_etf_metrics.py  check_schema.py  iter100_overlay_report.py  iter95_strategy_spec_report.py  momentum_scan.py  robust_alpha_campaign_report.py  robust_alpha_evaluator.py  serenity_pipeline.py  serenity_valuation.py  taiwan_all_etf_fee_overlay.py  taiwan_equity_etf_ranking.py
research/apex/: CHARTER.md  STRATEGY.md  assemble.py  data.py  factors.py  refit.py  revalidate_corrected.py  strategy_s.py  validate.py
research/audits/: 01_find_spikes.py  02_anomaly_scan.py  03_full_data_audit.py  05_revenue_audit.py  06_mops_tdcc_publish_probe.py  date_integrity.py  recrawl.py
research/brokers/: __init__.py  fubon.py  fubon_smoke_test.py
research/crawl/: __init__.py  archive.py  http.py  parse.py  rebuild.py  rebuild_financials.py  refetch_quarter.py  sink.py  slim_cache.py  update.py  verify_vs_pg.py
research/data/: confcall_events.parquet  revenue_first_seen.parquet  tw_stock_news_aliases.csv
research/data_macro/: business_climate_signal.parquet  fetch_macro.py  m1b_yoy.parquet  m2_yoy.parquet  rediscount_rate.parquet  rediscount_rate_changes.parquet  usdtwd.parquet
research/evergreen/: LEDGER.md  PHILOSOPHY_v4.md  PROMPT_ev27_attribution.md  PROMPT_ev28_labeling.md  PROMPT_ev34_rescore.md  engine.py  ev14_duel.py  ev15_lead_bound.py  ev16_discipline_check.py  ev17_compare.py  ev18_compare.py  ev18_horizon.py  ev18_make_packs.py  ev19_compare.py  ev19_make_tables.py  ev20_meta_ablation.py  ev21_theme_momentum.py  ev23_verdict.py  ev24_autopsy.py  ev24_baseline.py  ev24_pool_quality.py  ev24_validate.py  ev25_compare.py  ev25_make_tables.py  ev26_engine.py  ev26_phase_a.py  ev26_phase_b.py  ev26_phase_c.py  ev26_phase_d.py  ev27_build_full.py  ev28_build_pilot.py  ev28_compare.py  (+49 more)
(+3575 files in other folders)
