[project]
name = "quantlib-research"
version = "0.1.0"
description = "Fast quant research on TW stock data — Polars + DuckDB"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.14.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "typer>=0.12.0",
    "numpy>=2.4.4",
]

[tool.uv]
managed = true
